framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_invalid_as_cast.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                const x = 1 as ; // missing type after 'as'
            }
        }
        $B {
        }
}

